[gd_scene load_steps=28 format=2]

[ext_resource path="res://Fonts/FredokaOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/storeicon10.png" type="Texture" id=2]
[ext_resource path="res://Assets/btn_play.png" type="Texture" id=3]
[ext_resource path="res://Assets/control_joystick.png" type="Texture" id=4]
[ext_resource path="res://Assets/quit_icon6.png" type="Texture" id=5]
[ext_resource path="res://Scripts/InitialButtons.gd" type="Script" id=6]
[ext_resource path="res://Assets/settings_icon3.png" type="Texture" id=7]
[ext_resource path="res://Scenes/GeneralButtons.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.282353, 0.294118, 0.968627, 0.666667 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.898039, 0.0156863, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.282353, 0.294118, 0.968627, 0.666667 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.898039, 0.0156863, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.282353, 0.294118, 0.968627, 0.666667 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.898039, 0.0156863, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0
anti_aliasing = false

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.282353, 0.294118, 0.968627, 0.666667 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.898039, 0.0156863, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.282353, 0.294118, 0.968627, 0.666667 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.898039, 0.0156863, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.282353, 0.294118, 0.968627, 0.666667 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.898039, 0.0156863, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0
anti_aliasing = false

[sub_resource type="DynamicFont" id=8]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.282353, 0.294118, 0.968627, 0.666667 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.898039, 0.0156863, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.282353, 0.294118, 0.968627, 0.666667 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.898039, 0.0156863, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.282353, 0.294118, 0.968627, 0.666667 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.898039, 0.0156863, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0
anti_aliasing = false

[sub_resource type="DynamicFont" id=12]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.282353, 0.294118, 0.968627, 0.666667 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.898039, 0.0156863, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.282353, 0.294118, 0.968627, 0.666667 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.898039, 0.0156863, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.282353, 0.294118, 0.968627, 0.666667 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.898039, 0.0156863, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0
anti_aliasing = false

[sub_resource type="DynamicFont" id=16]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.282353, 0.294118, 0.968627, 0.666667 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.898039, 0.0156863, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.282353, 0.294118, 0.968627, 0.666667 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.898039, 0.0156863, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.282353, 0.294118, 0.968627, 0.666667 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.898039, 0.0156863, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0
anti_aliasing = false

[node name="InitialButtons" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -395.0
margin_right = -200.0
margin_bottom = -395.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = 73.8774
margin_top = 272.326
margin_right = 325.877
margin_bottom = 567.326
color = Color( 0.34902, 0.741176, 0.847059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnStart" type="Button" parent="."]
margin_left = 87.0
margin_top = 293.0
margin_right = 313.0
margin_bottom = 339.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.898039, 0.0156863, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "START"
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnStore" type="Button" parent="."]
margin_left = 87.0
margin_top = 355.0
margin_right = 313.0
margin_bottom = 401.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 0.898039, 0.0156863, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "STORE"
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnSettings" type="Button" parent="."]
margin_left = 87.0
margin_top = 480.0
margin_right = 313.0
margin_bottom = 526.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 0.898039, 0.0156863, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "SETTINGS"
icon = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnControls" type="Button" parent="."]
margin_left = 87.0
margin_top = 418.0
margin_right = 313.0
margin_bottom = 464.0
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 1, 0.898039, 0.0156863, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "CONTROLS"
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnQuit" type="Button" parent="."]
margin_left = 87.0
margin_top = 542.0
margin_right = 313.0
margin_bottom = 588.0
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 1, 0.898039, 0.0156863, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "QUIT"
icon = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GeneralButtons" parent="." instance=ExtResource( 8 )]

[connection signal="pressed" from="btnStart" to="." method="_on_btnStart_pressed"]
[connection signal="pressed" from="btnStore" to="." method="_on_btnStore_pressed"]
[connection signal="pressed" from="btnSettings" to="." method="_on_btnSettings_pressed"]
[connection signal="pressed" from="btnControls" to="." method="_on_btnControls_pressed"]
[connection signal="pressed" from="btnQuit" to="." method="_on_btnQuit_pressed"]
